--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&useJDBCCo
 server.error.whitelabel.enabled=false
 server.port=9082
 spring.datasource.username=root
-spring.datasource.password=Root@123
+spring.datasource.password=root
